feat: standardize comments, fix compilation, and update documentation